# finance-accounting-agent-benchmark

./: README.md  pyproject.toml
proposal/: discussion-notes.md  proposal.md
samples/: campaign-baseline.txt  suite-baseline.txt
samples/seed-0001/: instance.json  scorecard.txt  solution.json
src/finbalance/: __init__.py  agents.py  campaign.py  cli.py  coa.py  discrepancies.py  generator.py  harness.py  ledger.py  model.py  money.py  serialize.py  suite.py  verifier.py
tests/: test_agents.py  test_campaign.py  test_generator.py  test_ledger.py  test_serialize.py  test_solvability.py  test_verifier.py
